--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,15 @@
 *.h5
 *.m4a
 .DS_Store
+
 app/deeplearning/*/data_sets/*.txt
 app/deeplearning/*/data_sets/*.json
 app/deeplearning/*/data_sets/*.jsonl
+app/deeplearning/*/data_sets/*/*.txt
+app/deeplearning/*/data_sets/*/*.json
+app/deeplearning/*/data_sets/*/*.jsonl
 app/deeplearning/*/storage/*.json
-app/deeplearning/tensorflow/finetuned_model/*
+app/deeplearning/llm/finetuned/*/*
 app/deeplearning/ocr/image/*
 !app/deeplearning/ocr/image/.gitkeep
 !app/deeplearning/ocr/image/screen_shot.png
