--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 *.m4a
 .DS_Store
 
+app/deeplearning/llm/cached*
+app/deeplearning/llm/runs/*
 app/deeplearning/*/data_sets/*.txt
 app/deeplearning/*/data_sets/*.json
 app/deeplearning/*/data_sets/*.jsonl
