--- a/app/deeplearning/llm/finetuned/rinna-gpt2/config.json
+++ b/app/deeplearning/llm/finetuned/rinna-gpt2/config.json
@@ -33,6 +33,7 @@
       "max_length": 50
     }
   },
+  "torch_dtype": "float32",
   "transformers_version": "4.29.2",
   "use_cache": true,
   "vocab_size": 32000
