--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ app/deeplearning/*/data_sets/*/*.txt
 app/deeplearning/*/data_sets/*/*.json
 app/deeplearning/*/data_sets/*/*.jsonl
 app/deeplearning/*/storage/*.json
+app/deeplearning/*/storage/*/*.json
 app/deeplearning/llm/finetuned/*/*
 app/deeplearning/llm/finetuned-lora/*/*
 app/deeplearning/llm/finetuned-lora-merged/*/*
