--- a/.gitignore
+++ b/.gitignore
@@ -12,11 +12,13 @@ app/deeplearning/llm/safetensors/*
 app/deeplearning/*/data_sets/*.txt
 app/deeplearning/*/data_sets/*.json
 app/deeplearning/*/data_sets/*.jsonl
+app/deeplearning/*/data_sets/*.csv
 app/deeplearning/*/data_sets/*/*.txt
+app/deeplearning/*/data_sets/*/*.csv
 app/deeplearning/*/data_sets/*/*.json
 app/deeplearning/*/data_sets/*/*.jsonl
-app/deeplearning/*/storage/*.json
-app/deeplearning/*/storage/*/*.json
+app/deeplearning/*/storage/*.*
+app/deeplearning/*/storage/*/*.*
 app/deeplearning/llm/finetuned/*/*
 app/deeplearning/llm/finetuned-lora/*/*
 app/deeplearning/llm/finetuned-lora-merged/*/*
